no data glitch on new boards; waveform length(NELM) is dynamically changed to samples/ch; provide raw data integer waveform and voltages waveform; add autosave and devIocStats; apply NSLS-2 naming convention

--- a/ics710App/Db/Makefile
+++ b/ics710App/Db/Makefile
@@ -15,11 +15,14 @@ include $(TOP)/configure/CONFIG
 #DB += dbSubExample.db
 #DB += user.substitutions
 #DB += userHost.substitutions
-DB += ics710Channel.template
-DB += ics710Channel.substitutions
-DB += ics710Card.template
-DB += ics710Card.substitutions
-
+#DB += ics710Channel.template
+#DB += ics710Channel.substitutions
+#DB += ics710Card.template
+#DB += ics710Card.substitutions
+DB += ics710Channel.db
+DB += ics710Card.db
+DB_INSTALLS += $(EPICS_BASE)/db/iocAdminSoft.db
+DB_INSTALLS += $(EPICS_BASE)/db/save_restoreStatus.db
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
 # <anyname>_TEMPLATE = <templatename>
