--- a/ics710App/Db/Makefile
+++ b/ics710App/Db/Makefile
@@ -21,6 +21,7 @@ include $(TOP)/configure/CONFIG
 #DB += ics710Card.substitutions
 DB += ics710Channel.db
 DB += ics710Card.db
+DB += ictQ.db
 DB_INSTALLS += $(EPICS_BASE)/db/iocAdminSoft.db
 DB_INSTALLS += $(EPICS_BASE)/db/save_restoreStatus.db
 #----------------------------------------------------
