added database for SR DCCT

--- a/ics710App/Db/Makefile
+++ b/ics710App/Db/Makefile
@@ -25,6 +25,7 @@ DB += ictQ.db
 DB += ictQSpecific.db
 DB += dcct.db
 DB += dcctBR.db
+DB += dcctSR.db
 DB_INSTALLS += $(EPICS_BASE)/db/iocAdminSoft.db
 DB_INSTALLS += $(EPICS_BASE)/db/save_restoreStatus.db
 #----------------------------------------------------
