the lowest sampling rate can be 1KHz after initialization; beamDosage.db is back; update on DCCT

--- a/ics710App/Db/Makefile
+++ b/ics710App/Db/Makefile
@@ -26,6 +26,7 @@ DB += ictQSpecific.db
 DB += dcct.db
 DB += dcctBR.db
 DB += dcctSR.db
+DB += beamDosage.db
 DB_INSTALLS += $(EPICS_BASE)/db/iocAdminSoft.db
 DB_INSTALLS += $(EPICS_BASE)/db/save_restoreStatus.db
 #----------------------------------------------------
