added caPutLog and cblmWfProcess.db

--- a/ics710App/Db/Makefile
+++ b/ics710App/Db/Makefile
@@ -27,7 +27,7 @@ DB += dcct.db
 DB += dcctBR.db
 DB += dcctSR.db
 DB += beamDosage.db
-DB += wfProcess.db
+DB += cblmWfProcess.db
 DB_INSTALLS += $(EPICS_BASE)/db/iocAdminSoft.db
 DB_INSTALLS += $(EPICS_BASE)/db/save_restoreStatus.db
 #----------------------------------------------------
